welcome.lessons.welcome.bat.bool1.LoneTeen.scala.code
def loneTeen(a:Int, b:Int):Boolean = {
  (a>= 13 & a<= 19) xor (b<=19 &b>=13) }